add swagger documentation to all apis
